--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,3 +1,4 @@
+
 <html>
   <body>
     <h1>Connexion</h1>
@@ -10,7 +11,7 @@
     <p>Pas encore de compte ? <a href="/register">S'inscrire</a></p>
 
     <script type="module">
-      import { pb } from "/src/lib/pb.js";
+      const { pb } = await import('/lib/pb.js');
 
       const form = document.getElementById("loginForm");
       form.onsubmit = async (e) => {
