--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,17 +1,21 @@
-
 <html>
   <body>
     <h1>Connexion</h1>
     <form id="loginForm">
-      <input name="email" type="email" placeholder="Email" required /><br>
-      <input name="password" type="password" placeholder="Mot de passe" required /><br>
+      <input name="email" type="email" placeholder="Email" required /><br />
+      <input
+        name="password"
+        type="password"
+        placeholder="Mot de passe"
+        required
+      /><br />
       <button>Se connecter</button>
     </form>
     <p id="msg"></p>
     <p>Pas encore de compte ? <a href="/register">S'inscrire</a></p>
 
     <script type="module">
-      const { pb } = await import('/lib/pb.js');
+      const { pb } = await import("/lib/pb.js");
 
       const form = document.getElementById("loginForm");
       form.onsubmit = async (e) => {
@@ -21,11 +25,8 @@
             form.email.value,
             form.password.value
           );
-          location.href = "/students";
-        } catch (err) {
-          document.getElementById("msg").textContent = "Échec de connexion";
-          console.error(err);
-        }
+
+          if(pb.authStore.isVerified === false) 
       };
     </script>
   </body>
