--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -21,12 +21,20 @@
       form.onsubmit = async (e) => {
         e.preventDefault();
         try {
-          await pb.collection("users").authWithPassword(
-            form.email.value,
-            form.password.value
-          );
-
-          if(pb.authStore.isVerified === false) 
+          await pb
+            .collection("users")
+            .authWithPassword(form.email.value, form.password.value);
+          //verifiez si l'email est verifié
+          if (pb.authStore.isVerified === false) {
+            document.getElementById("msg").textContent =
+              "Veuillez vérifier votre email avant de continuer.";
+            return;
+          }
+          location.href = "/students";
+        } catch (err) {
+          document.getElementById("msg").textContent = "Échec de connexion";
+          console.error(err);
+        }
       };
     </script>
   </body>
