--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import "../style/global.css";
 
 <html>
   <body>
-    <h1>Accueil</h1>
+    <h1>Accueil test</h1>
     <button class="btn"> daisyUI Button </button>
     <script type="module">
       const { pb } = await import("/lib/pb.js");
